{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 8,
  "lineage": "4003d694-4634-a46e-238b-125f00e5d9e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:573857664616:internet-gateway/igw-0604bc05954928116",
            "id": "igw-0604bc05954928116",
            "owner_id": "573857664616",
            "vpc_id": "vpc-02407953d21cfd896"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0604bc05954928116",
            "id": "r-rtb-033f3e2ffaf9e83981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-033f3e2ffaf9e8398",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "exposed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:573857664616:security-group/sg-0a3888d40986b51ab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "142.154.203.254/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3888d40986b51ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "142.154.203.254/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "142.154.203.254/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "142.154.203.254/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "exposed",
            "name_prefix": null,
            "owner_id": "573857664616",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-02407953d21cfd896"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:573857664616:subnet/subnet-00a4171dd94058a7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.12.16.0/20",
            "id": "subnet-00a4171dd94058a7e",
            "map_public_ip_on_launch": true,
            "owner_id": "573857664616",
            "vpc_id": "vpc-02407953d21cfd896"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:573857664616:subnet/subnet-01e010bcc18d018b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.12.32.0/20",
            "id": "subnet-01e010bcc18d018b8",
            "map_public_ip_on_launch": true,
            "owner_id": "573857664616",
            "vpc_id": "vpc-02407953d21cfd896"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:573857664616:subnet/subnet-0bbd583894c86fa72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.12.48.0/20",
            "id": "subnet-0bbd583894c86fa72",
            "map_public_ip_on_launch": true,
            "owner_id": "573857664616",
            "vpc_id": "vpc-02407953d21cfd896"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:573857664616:vpc/vpc-02407953d21cfd896",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.12.0.0/16",
            "default_network_acl_id": "acl-063fa008413ed2f77",
            "default_route_table_id": "rtb-033f3e2ffaf9e8398",
            "default_security_group_id": "sg-06796eb9dc51b0e61",
            "dhcp_options_id": "dopt-03c7a7963c86b814e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02407953d21cfd896",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-033f3e2ffaf9e8398",
            "owner_id": "573857664616"
          }
        }
      ]
    }
  ]
}